--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "7.8.7",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.8.7",
@@ -47,7 +47,7 @@
     "@geosolutions/acorn-jsx": "4.0.2",
     "@geosolutions/jsdoc": "3.4.4",
     "@geosolutions/mocha": "6.2.1-3",
-    "@mapstore/eslint-config-mapstore": "1.0.3",
+    "@mapstore/eslint-config-mapstore": "^1.0.3",
     "axios-mock-adapter": "1.16.0",
     "babel-loader": "8.0.5",
     "babel-plugin-add-module-exports": "0.1.4",
@@ -63,7 +63,7 @@
     "download-cli": "1.0.1",
     "dynamic-public-path-webpack-plugin": "1.0.4",
     "escope": "3.2.0",
-    "eslint": "7.8.1",
+    "eslint": "^7.8.1",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-no-only-tests": "2.3.1",
     "eslint-plugin-react": "3.3.2",
